[gd_scene load_steps=3 format=2]

[ext_resource path="res://Inventory.gd" type="Script" id=1]
[ext_resource path="res://scenes/StoreItem.tscn" type="PackedScene" id=2]

[node name="Inventory" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.313726, 0.364706, 0.137255, 1 )

[node name="Inventory" type="MarginContainer" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 704.0
margin_bottom = 466.0

[node name="HBox" type="HBoxContainer" parent="Inventory"]
margin_right = 688.0
margin_bottom = 450.0

[node name="FeedContainer" type="VBoxContainer" parent="Inventory/HBox"]
margin_right = 473.0
margin_bottom = 450.0
size_flags_horizontal = 3

[node name="Title" type="Label" parent="Inventory/HBox/FeedContainer"]
margin_right = 473.0
margin_bottom = 14.0
text = "Feed"
align = 1

[node name="VSeparator3" type="VSeparator" parent="Inventory/HBox"]
margin_left = 477.0
margin_right = 481.0
margin_bottom = 450.0
size_flags_vertical = 3

[node name="VSeparator4" type="VSeparator" parent="Inventory/HBox"]
margin_left = 485.0
margin_right = 489.0
margin_bottom = 450.0
size_flags_vertical = 3

[node name="StoreContainer" type="VBoxContainer" parent="Inventory/HBox"]
margin_left = 493.0
margin_right = 688.0
margin_bottom = 450.0

[node name="Label" type="Label" parent="Inventory/HBox/StoreContainer"]
margin_right = 195.0
margin_bottom = 14.0
text = "STORE"
align = 1

[node name="HBox" type="HBoxContainer" parent="Inventory/HBox/StoreContainer"]
margin_top = 18.0
margin_right = 195.0
margin_bottom = 450.0
size_flags_vertical = 3

[node name="StoreList" type="VBoxContainer" parent="Inventory/HBox/StoreContainer/HBox"]
margin_right = 179.0
margin_bottom = 432.0
size_flags_horizontal = 3

[node name="HBox2" parent="Inventory/HBox/StoreContainer/HBox/StoreList" instance=ExtResource( 2 )]
margin_right = 179.0
title = "Berry Mix"
price = 2

[node name="HBox3" parent="Inventory/HBox/StoreContainer/HBox/StoreList" instance=ExtResource( 2 )]
margin_top = 28.0
margin_right = 179.0
margin_bottom = 52.0
title = "Insect Bag"
price = 2

[node name="StoreItem" parent="Inventory/HBox/StoreContainer/HBox/StoreList" instance=ExtResource( 2 )]
margin_top = 56.0
margin_right = 179.0
margin_bottom = 80.0
title = "Pellets"

[node name="VSeparator" type="VSeparator" parent="Inventory/HBox/StoreContainer/HBox"]
margin_left = 183.0
margin_right = 187.0
margin_bottom = 432.0
size_flags_vertical = 3

[node name="VSeparator2" type="VSeparator" parent="Inventory/HBox/StoreContainer/HBox"]
margin_left = 191.0
margin_right = 195.0
margin_bottom = 432.0
size_flags_vertical = 3

[node name="HSeparator" type="HSeparator" parent="."]
margin_left = 16.0
margin_top = 270.0
margin_right = 704.0
margin_bottom = 274.0
